--- a/notebooks/house_pp_colab.ipynb
+++ b/notebooks/house_pp_colab.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPsmZ4bCZnEAQ/bIDXHsDo9",
+      "authorship_tag": "ABX9TyMpEu1QZmyaSHRvc5PK19yq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,7 +31,7 @@
       "source": [
         "# House Price Prediction (Colab)\n",
         "It's an exploratory notebooks since my laptop is so bapuk.\n",
-        "Guess I'll do lots of work here, before copy-pasting and make it into chunks in the local notebooks.\n",
+        "Guess I'll do lots of work here, before copy-pasting and make it into chunks in the local notebooks. **Please, do not run**\n",
         "1. Data\n",
         "2. EDA"
       ],
