update fix model

--- a/notebooks/03_modeling_advanced.ipynb
+++ b/notebooks/03_modeling_advanced.ipynb
@@ -1371,7 +1371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 37,
    "id": "6dac75d1",
    "metadata": {},
    "outputs": [
@@ -1574,7 +1574,7 @@
        "2   GridSearchCV(cv=KFold(n_splits=5, random_state...  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1619,7 +1619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 48,
    "id": "3cb94dd8",
    "metadata": {},
    "outputs": [
@@ -1629,19 +1629,19 @@
        "['../models/best_tuned01.joblib']"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# # save, can't do with feature_eng, need to be in py or so? \n",
-    "joblib.dump(all_res03.loc[1, 'grid'].best_estimator_, '../models/best_tuned01.joblib')"
+    "joblib.dump(all_res03.grid.iloc[0].best_estimator_, '../models/best_tuned01.joblib')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 45,
    "id": "c385c501",
    "metadata": {},
    "outputs": [
@@ -1649,24 +1649,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test RMSE: 31000.0 \n",
-      "Test MSLE 0.164\n"
+      "Test RMSE: 25000.0 \n",
+      "Test MSLE 0.141\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "(None, 191.6463487589148)"
+       "(None, 154.04263324386503)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Predict & evaluate on test set\n",
-    "y_pred = all_res03.loc[1, 'grid'].predict(X_te)\n",
+    "y_pred = all_res03.grid.iloc[0].predict(X_te)\n",
     "rmse = root_mean_squared_error(y_te, y_pred)\n",
     "msle = root_mean_squared_log_error(y_te, y_pred)\n",
     "print(\"Test RMSE:\", round(rmse, -3), \"\\nTest MSLE\", round(msle,3)), rmse/163"
@@ -2065,7 +2065,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 46,
    "id": "0d6aa594",
    "metadata": {},
    "outputs": [
@@ -2268,7 +2268,7 @@
        "2   GridSearchCV(cv=KFold(n_splits=5, random_state...  "
       ]
      },
-     "execution_count": 27,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2313,7 +2313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "id": "4406ee99",
    "metadata": {},
    "outputs": [
@@ -2323,19 +2323,19 @@
        "['../models/best_select.joblib']"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# # save, can't do with feature_eng, need to be in py or so? \n",
-    "joblib.dump(all_res04.loc[1, 'grid'].best_estimator_, '../models/best_select.joblib')"
+    "joblib.dump(all_res04.grid.iloc[0].best_estimator_, '../models/best_select.joblib')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "id": "fd04a246",
    "metadata": {},
    "outputs": [
@@ -2343,24 +2343,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test RMSE: 30000.0 \n",
-      "Test MSLE 0.163\n"
+      "Test RMSE: 28000.0 \n",
+      "Test MSLE 0.151\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "(None, 183.51494402937874)"
+       "(None, 169.0119104677914)"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Predict & evaluate on test set\n",
-    "y_pred = all_res04.loc[1, 'grid'].predict(X_te)\n",
+    "# Predict & evaluate on test set (not recommended)\n",
+    "y_pred = all_res04.grid.iloc[0].predict(X_te)\n",
     "rmse = root_mean_squared_error(y_te, y_pred)\n",
     "msle = root_mean_squared_log_error(y_te, y_pred)\n",
     "print(\"Test RMSE:\", round(rmse, -3), \"\\nTest MSLE\", round(msle,3)), rmse/163"
